remove auto save

--- a/index_glass.html
+++ b/index_glass.html
@@ -197,7 +197,7 @@
 
     zip.generateAsync({type: "blob", compression: "DEFLATE", compressionOptions: {level: 9}})
     .then(function (content) {
-    saveAs(content, "hello.zip");
+    //saveAs(content, "hello.zip");
     });
 
 
