--- a/index_glass.html
+++ b/index_glass.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="3rd/bootstrap-3.3.2-dist/css/bootstrap-theme.min.css">
     <!-- Latest compiled and minified JavaScript -->
     <script src="3rd/bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
+    <script src="3rd/list.min.js"></script>
+
     <title>glass mgr</title>
     <style type="text/css" media="screen">
         .scrollmargin {
@@ -64,9 +66,17 @@
                         <pre id="editor1">
                         </pre>
                     </div>
-
                 </div>
                 <div class="col-xs-6" id="pp">
+                    <div id="hacker-list">
+                        <table class="list">
+                            <tr>
+                                <td class="name"></td>
+                                <td class="city"></td>
+                            </tr>
+                        </table>
+                    </div>
+
                 </div>
             </div>
 
@@ -81,7 +91,6 @@
         <div class="row">
             <div class="col-xs-3 col-xs-offset-10">
                 <p class="copyright">Yxscalc maintained by <a href="https://github.com/yxsicd">yxsicd</a></p>
-
                 <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
             </div>
         </div>
@@ -100,100 +109,21 @@
     editor.setOption("maxLines", defaultline);
 
 </script>
-
-<script type="text/html" id="runscript">
-    /**
-    * Created by yxs on 2016/6/5.
-    */
-    // 96312cf60f3e4fa5b0d326a17f40f0c1fe4962ae
-    // token auth
-
-    //PUT /repos/:owner/:repo/contents/:path
-    /**
-    * Created by yxs on 2016/6/5.
-    */
-    // 96312cf60f3e4fa5b0d326a17f40f0c1fe4962ae
-    // token auth
-
-    var gh = new GitHub({username:"yxsdb",password:""});
-    var nowreop = gh.getRepo("yxsdb", "data");
-
-    function writeData(reop, path, data) {
-    var ts = new Date().valueOf() + "";
-    reop.writeFile("master", path, data, ts, {"encode": true})
-    }
-
-    function readData(reop, path, callback) {
-    var ts = new Date().valueOf() + "";
-    reop.getContents("master", path, true).then(callback)
-    }
-
-    function zipString(str, callback) {
-    var zip1 = new JSZip();
-    zip1.file("base64", str);
-    zip1.generateAsync({type: "base64", compression: "DEFLATE", compressionOptions: {level: 9}})
-    .then(function (content) {
-    var zip2 = new JSZip();
-    zip2.file("base64", content);
-    zip2.generateAsync({type: "base64", compression: "DEFLATE", compressionOptions: {level: 9}})
-    .then(function (content2) {
-    callback ? callback(content2) : 0;
-    });
-    });
-    }
-
-    function unzipString(bash64String, callback) {
-    new JSZip().loadAsync(bash64String, {"base64": true}).then(
-    function (myzip) {
-    console.log("unzip1",myzip);
-    myzip.file("base64").async("string").then(function (d) {
-    //console.log("base64: ", d)
-    new JSZip().loadAsync(d, {"base64": true}).then(
-    function (nzip) {
-    console.log("unzip2",nzip)
-    nzip.file("base64").async("string").then(function (content) {
-    callback ? callback(content) : 0;
-    });
-    }
-    )
-    });
-    }
-    );
-    }
-
-    var zip = new JSZip();
-    var db = new loki("db.json");
-    var c_p = db.addCollection("people");
-    for (var i = 0; i < 100; i++) {
-    c_p.insert({"name": "name" + i, "age": i})
-    }
-    var dbstr = db.serialize();
-
-    zipString(dbstr, function (d) {
-    writeData(nowreop, "db/db.zip", d)
-    })
-    readData(nowreop, "db/db.zip", function (d) {
-    console.log("data:", d);
-    unzipString(d.data, function (c) {
-    //console.log("json:", c);
-    var db = new loki();
-    db.loadJSON(c);
-    console.log("db",db);
-    });
-    });
-
-
-</script>
-
 <script>
-
-    editor.setValue(runscript.innerText)
+    $.get("dev/githubdb.js").then(function(d){editor.setValue(d);})
     $("#bt_run").click(function () {
         eval(editor.getValue());
     });
-    eval(editor.getValue());
 
+    var options = {
+        valueNames: [ 'name', 'city' ]
+    };
 
+    var listObj = new List('hacker-list', options);
+
+    for(var i=0;i<100;i++) {
+        listObj.add({name: "name"+i, city: "city"+i})
+    }
 </script>
 
 
