--- a/index.html
+++ b/index.html
@@ -1,208 +1,42 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Yxscalc : Simple tool calculate data.">
-
-    <script src="3rd/lodash.min.js"></script>
-    <script src="3rd/jquery-1.11.2.min.js"></script>
-
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="3rd/bootstrap-3.3.2-dist/css/bootstrap.min.css">
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="3rd/bootstrap-3.3.2-dist/css/bootstrap-theme.min.css">
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="3rd/bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
-
-    <title>Yxscalc</title>
-
-    <style type="text/css" media="screen">
-
-        .scrollmargin {
-            height: 100px;
-            text-align: center;
-        }
-
-        .ace_editor {
-            margin: 0;
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-        }
-    </style>
-
-
+    <meta name="description" content="Yxscalc : yxs tool website.">
+    <script src="3rd/svg.min.js"></script>
 </head>
 
-<body>
+<body id="mainbody">
+<div>
 
-<!-- HEADER -->
-<div id="header_wrap" class="row">
-    <header>
-        <div class="row">
-            <div class="col-xs-1"></div>
-            <div class="col-xs-5">
-                <button id="bt_run" type="button" class="btn btn-lg btn-danger">运行</button>
-                <button id="bt_same" type="button" class="btn btn-lg btn-danger">交集</button>
-                <button id="bt_diff" type="button" class="btn btn-lg btn-danger">差集</button>
-            </div>
-            <div class="col-xs-2 col-xs-offset-3 btn btn-info btn-sm">
-                <a href="https://github.com/yxsicd/yxscalc">View on GitHub</a>
-            </div>
-        </div>
-    </header>
 </div>
-
-<!-- MAIN CONTENT -->
-<div id="main_content_wrap" class="container-fluid">
-    <div class="row">
-        <div class="col-xs-12">
-            <div class="row" style="height:100%">
-                <div class="col-xs-6" style="height:100%">
-                    <span class="col-xs-12 label label-primary">集合1</span>
-                <textarea class="col-xs-12 well text-left text-nowrap" style="height: 50%" id="src_1">
-1
-2
-相同
-不同
-                </textarea>
-                    <input id="file_1" class="col-xs-12 btn btn-sm btn-danger" type="file"/>
-                </div>
-                <div class="col-xs-6" style="height:100%">
-                    <span class="col-xs-12 label label-primary">集合2</span>
-                <textarea class="col-xs-12 well text-left text-nowrap" id="src_2" style="height: 150px;">
-2
-3
-相同
-                </textarea>
-                    <input id="file_2" class="col-xs-12 btn btn-sm btn-danger" type="file"/>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-6">
-                    <span class="col-xs-12 label label-primary">结果</span>
-                    <textarea class="col-xs-12 well  text-left text-nowrap" id="output_1"
-                              style="height: 200px;"></textarea>
-                </div>
-                <div class="col-xs-6" style="height:100%">
-                    <div>
-                        <span class="col-xs-12 label label-primary">脚本</span>
-             <pre class="col-xs-12" id="editor1">
-             </pre>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<div style="z-index:100;position:absolute;width:100%;height:100%;top:40px">
+    <iframe id="frame" name="frame" style="width:100%;height:100%;"></iframe>
 </div>
-
-<!-- FOOTER  -->
-<div id="footer_wrap" class="row">
-    <footer class="inner">
-        <div class="row">
-            <div class="col-xs-3 col-xs-offset-10">
-                <p class="copyright">Yxscalc maintained by <a href="https://github.com/yxsicd">yxsicd</a></p>
-                <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-            </div>
-        </div>
-
-    </footer>
+<div id="topdraw"
+     style="z-index:101;position:fixed;height:0px;width:0px;">
 </div>
-
-<script id="calc_comm">
-
-</script>
-
-<script id="calc_same">
-
-    function calc() {
-        var d1 = src_1.getValue();
-        var d2 = src_2.getValue();
-        var arr1 = d1.split("\n");
-        var arr2 = d2.split("\n");
-        arr1 = _.map(arr1, _.trim);
-        arr2 = _.map(arr2, _.trim);
-        var arr_ret = _.intersection(arr1, arr2);
-        output_1.setValue(arr_ret.join('\n'));
-    }
-    calc();
-
-</script>
-
-
-<script id="calc_diff">
-
-    function calc() {
-        var d1 = src_1.getValue();
-        var d2 = src_2.getValue();
-        var arr1 = d1.split("\n");
-        var arr2 = d2.split("\n");
-        arr1 = _.map(arr1, _.trim);
-        arr2 = _.map(arr2, _.trim);
-        var arr_ret = _.difference(arr1, arr2);
-        output_1.setValue(arr_ret.join('\n'));
-    }
-    calc();
-
-</script>
-
-
-<script src="3rd/ace/src-min-noconflict/ace.js"></script>
-<script>
-    var defaultline=15;
-
-    var editor = ace.edit("editor1");
-    editor.setTheme("ace/theme/tomorrow_night_eighties");
-    editor.session.setMode("ace/mode/javascript");
-    editor.setOption("minLines", defaultline);
-    editor.setOption("maxLines", defaultline);
-
-    var src_1 = ace.edit("src_1");
-    src_1.setTheme("ace/theme/tomorrow_night_eighties");
-    src_1.session.setMode("ace/mode/text");
-    src_1.setOption("minLines", defaultline);
-    src_1.setOption("maxLines", defaultline);
-
-    var src_2 = ace.edit("src_2");
-    src_2.setTheme("ace/theme/tomorrow_night_eighties");
-    src_2.session.setMode("ace/mode/text");
-    src_2.setOption("minLines", defaultline);
-    src_2.setOption("maxLines", defaultline);
-
-    var output_1 = ace.edit("output_1");
-    output_1.setTheme("ace/theme/tomorrow_night_eighties");
-    output_1.session.setMode("ace/mode/text");
-    //output_1.setAutoScrollEditorIntoView(true);
-    output_1.setOption("minLines", defaultline);
-    output_1.setOption("maxLines", defaultline);
-
-
-</script>
-
-<script>
-    $("#bt_diff").click(function () {
-        editor.setValue(calc_diff.innerText);
-        eval(editor.getValue());
-    });
-
-    $("#bt_same").click(function () {
-        editor.setValue(calc_same.innerText);
-        eval(editor.getValue());
-    });
-
-    $("#bt_run").click(function () {
-        eval(editor.getValue());
-    });
-
-</script>
-
-
 </body>
+<script>
+
+    var draw = SVG('topdraw').size('1000px', '30px')
+
+    function addLink(index, linkstr, color)
+    {
+        //var circle = draw.circle(100).attr({ fill: '#00f' })
+        var circle = draw.circle(30).attr({fill: color}).style({"z-index":102})
+        circle.center(40*index,15);
+        circle.linkTo(function (link) {
+            link.to(linkstr).target('frame')
+        })
+    }
+
+    addLink(1, "index_glass.html", '#f06')
+    addLink(2, "index_three.html","#00f")
+    addLink(3, "index_calc.html",'#0f0')
+
+</script>
+
 </html>
