change position to abu

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <iframe id="frame" name="frame" style="width:100%;height:100%;"></iframe>
 </div>
 <div id="topdraw"
-     style="z-index:101;position:fixed;height:0px;width:0px;">
+     style="z-index:101;position:absolute;height:0px;width:0px;">
 </div>
 </body>
 <script>
