--- a/index_kuaidi.html
+++ b/index_kuaidi.html
@@ -19,6 +19,8 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="3rd/bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
 
+     <script src="3rd/localforage.js"></script>
+
     <title>Yxscalc</title>
 
     <style type="text/css" media="screen">
