--- a/index_kuaidi.html
+++ b/index_kuaidi.html
@@ -7,19 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Yxscalc : Simple tool calculate data.">
 
-    <script src="3rd/lodash.min.js"></script>
-    <script src="3rd/jquery-1.11.2.min.js"></script>
+    <script src="http://yxsicd.github.io/yxscalc/3rd/lodash.min.js"></script>
+    <script src="http://yxsicd.github.io/yxscalc/3rd/jquery-1.11.2.min.js"></script>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="3rd/bootstrap-3.3.2-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://yxsicd.github.io/yxscalc/3rd/bootstrap-3.3.2-dist/css/bootstrap.min.css">
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="3rd/bootstrap-3.3.2-dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="http://yxsicd.github.io/yxscalc/3rd/bootstrap-3.3.2-dist/css/bootstrap-theme.min.css">
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="3rd/bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
+    <script src="http://yxsicd.github.io/yxscalc/3rd/bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
 
-     <script src="3rd/localforage.js"></script>
+     <script src="http://yxsicd.github.io/yxscalc/3rd/localforage.js"></script>
 
     <title>Yxscalc</title>
 
@@ -155,7 +155,7 @@
 </script>
 
 
-    <script src="3rd/ace/src-min-noconflict/ace.js"></script>
+    <script src="http://yxsicd.github.io/yxscalc/3rd/ace/src-min-noconflict/ace.js"></script>
     <script>
     var defaultline=15;
 
@@ -208,7 +208,7 @@
 
 </script>
 
-   <script src="dev/kuaidi.js"></script>
+   <script src="http://yxsicd.github.io/yxscalc/dev/kuaidi.js"></script>
 
 
 </body>
