嘻嘻嘻嘻嘻嘻嘻嘻嘻

--- a/index_kuaidi.html
+++ b/index_kuaidi.html
@@ -145,7 +145,7 @@
 </script>
 
 
-    <script src="http://yxsicd.github.io/yxscalc/3rd/ace/src-min-noconflict/ace.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
     <script>
     var defaultline=15;
 
