--- a/index_kuaidi.html
+++ b/index_kuaidi.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Yxscalc : Simple tool calculate data.">
 
-    <script src="http://yxsicd.github.io/yxscalc/3rd/lodash.min.js"></script>
-    <script src="http://yxsicd.github.io/yxscalc/3rd/jquery-1.11.2.min.js"></script>
-     <script src="http://yxsicd.github.io/yxscalc/3rd/localforage.js"></script>
+    <script src="https://yxsicd.github.io/yxscalc/3rd/lodash.min.js"></script>
+    <script src="https://yxsicd.github.io/yxscalc/3rd/jquery-1.11.2.min.js"></script>
+     <script src="https://yxsicd.github.io/yxscalc/3rd/localforage.js"></script>
 
     <title>Yxscalc</title>
 
@@ -145,7 +145,7 @@
 </script>
 
 
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
+    <script src="https://yxsicd.github.io/yxscalc/3rd/ace.js"></script>
     <script>
     var defaultline=15;
 
