--- a/index_kuaidi.html
+++ b/index_kuaidi.html
@@ -145,7 +145,7 @@
 </script>
 
 
-    <script src="https://yxsicd.github.io/yxscalc/3rd/ace.js"></script>
+    <script src="https://yxsicd.github.io/yxscalc/3rd/ace/src-min-noconflict/ace.js"></script>
     <script>
     var defaultline=15;
 
@@ -173,7 +173,6 @@
     //output_1.setAutoScrollEditorIntoView(true);
     output_1.setOption("minLines", defaultline);
     output_1.setOption("maxLines", defaultline);
-
 
 </script>
 
