--- a/index_kuaidi.html
+++ b/index_kuaidi.html
@@ -12,7 +12,7 @@
 
 
 -->
-<div id="table_order">
+<div id="table_order" style="background-color:white">
     <div class="container-fluid">
         <div class="row">
             <div class="row form-inline">
