--- a/index_kuaidi.html
+++ b/index_kuaidi.html
@@ -37,6 +37,7 @@
                     <label for="pagesize_input">{{ res.datafile }}</label>
                     <input type="file" class="form-control" placeholder="{{ res.datafile }}" @change="filechange" style=“widht:90px”>
                     <button type="button" class="btn btn-info btn-xs" @click="queryorder">{{res.queryorder}}</button>
+                    <button type="button" class="btn btn-info btn-xs" @click="exportfile">{{res.exportfile}}</button>
                 </div>
             </div>
         </div>
