--- a/index_kuaidi.html
+++ b/index_kuaidi.html
@@ -38,6 +38,7 @@
                     <input type="file" class="form-control" placeholder="{{ res.datafile }}" @change="filechange" style=“widht:90px”>
                     <button type="button" class="btn btn-info btn-xs" @click="queryorder">{{res.queryorder}}</button>
                     <button type="button" class="btn btn-info btn-xs" @click="exportfile">{{res.exportfile}}</button>
+                    <span>{{check_index}}</span><span>/</span><span>{{check_count}}</span>
                 </div>
             </div>
         </div>
