--- a/index_three.html
+++ b/index_three.html
@@ -73,10 +73,10 @@
                         </pre>
                     </div>
                     
-                </div>
+                </div></div>
                 <div class="col-xs-6" id="pp">
                     </div>
-            </div>
+            
 
         </div>
 
