--- a/index_kuaidi.html
+++ b/index_kuaidi.html
@@ -51,7 +51,7 @@
             </th>
         </tr>
         <tr v-for="row in rows_show" track-by="$index">
-            <td v-for="item in row">{{item}}</td>
+            <td v-for="item in row"  track-by="$index">{{item}}</td>
         </tr>
     </table>
 
