--- a/index_svg.html
+++ b/index_svg.html
@@ -10,11 +10,16 @@
 
 <body>
 
-    <svg style="position:absolute" id="routesvg" width="600" height="600" xmlns="http://www.w3.org/2000/svg">
-        <path d="M130 110 C 130 120 180 150 180 140" stroke="black" fill="transparent" />
+    <svg style="position:absolute" id="routesvg" width="600" height="600" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+        <path id='test' d="M130 110 C 130 120 180 150 180 140" stroke="black" stroke-width="5" fill="transparent" />
+        <g id="gall"></g>
     </svg>
 
     <canvas style="position:absolute" id="myCanvas" width="2000" height="2000"></canvas>
+
+    <svg style="position:absolute;top:0;left:600" width="200" height="200" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
+        <use x="50" y="10" xlink:href="#gall" transform="scale(0.2 0.2)" style="fill:red"/>
+    </svg>
     <script src="dev/svg.js">
 
 </script>
