--- a/index_svg.html
+++ b/index_svg.html
@@ -17,9 +17,9 @@
 
     <canvas style="position:absolute" id="myCanvas" width="2000" height="2000"></canvas>
 
-    <svg style="position:absolute;top:0;left:600" width="200" height="200" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
+    <!--<svg style="position:absolute;top:0;left:600" width="200" height="200" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
         <use x="50" y="10" xlink:href="#gall" transform="scale(0.2 0.2)" style="fill:red"/>
-    </svg>
+    </svg>-->
     <script src="dev/svg.js">
 
 </script>
