--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,15 +10,25 @@
 </head>
 
 <body id="mainbody">
-<div>
+    <div>
+        <input type="color" />
+        <input type="date" />
+        <input type="time" />
+         <input type="datetime-local" />
+         <input type="search" />
+         
+    </div>
+    <!--<div style="z-index:100;position:absolute;width:100%;height:100%;top:40px">
+        <iframe id="frame" name="frame" style="width:100%;height:100%;"></iframe>
+    </div>
+    <div id="topdraw" style="z-index:101;position:absolute;height:0px;width:0px;">
 
-</div>
-<div style="z-index:100;position:absolute;width:100%;height:100%;top:40px">
-    <iframe id="frame" name="frame" style="width:100%;height:100%;"></iframe>
-</div>
-<div id="topdraw"
-     style="z-index:101;position:absolute;height:0px;width:0px;">
-</div>
+    </div>-->
+
+
+
+
+
 </body>
 <script>
 
